--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   width: 100vw;
   height: 100vh;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   padding: 0;
   margin: 0;
   background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
